--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">PicoVideoPlayerSample</string>
+    <string name="app_name">Easy Connection (Controller)</string>
 </resources>
